# osiris-be

./: .dockerignore  .env  .gitignore  ANALYSIS.md  AUDIT_REPORT.md  AUDIT_REPORT_E4_3.md  AUDIT_REPORT_EPIC1.md  AUDIT_REPORT_EPIC2.md  AUDIT_REPORT_EPIC3.md  AUDIT_REPORT_EPIC4.md  AUDIT_REPORT_EPIC5.md  AUDIT_REPORT_EPIC6.md  AUDIT_REPORT_EPIC7.md  AUDIT_REPORT_EPIC8.md  AUDIT_REPORT_EPIC9.md  AUDIT_REPORT_REFACTOR.md  AUDIT_REPORT_RIMPE_PATCH.md  AUDIT_REPORT_SMOKE.md  AUDIT_REPORT_SMOKE_FINAL.md  AUDIT_REPORT_SMOKE_FINAL_COMPLIANT.md  AUDIT_REPORT_SMOKE_TESTS.md  Dockerfile.dev  FINAL_AUDIT_REPORT.md  Makefile  README.md  alembic.ini  backup_before_refactor.sql  docker-compose.yml  dockerfile  grep_output.txt  list_repositories.txt  pendientes.md  pyproject.toml  pytest.ini  pytest_output.txt  pytest_output_v2.txt  pytest_output_v3.txt  pytest_output_v4.txt  pytest_output_v5.txt  pytest_output_v6.txt  (+5 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  enterprise-gate.yml  security.yml
conf/: aux_impuesto_catalogo.json
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: intro.md
osiris/: __init__.py
osiris-backend/: pom.xml
osiris-frontend/: package-lock.json  package.json
osiris-frontend/public/: index.html
osiris-frontend/src/: index.js
scripts/: README.md  audit_docs_api_coverage.py  check_producto_relations.py  check_productos_relations.py  check_seed_data.py  cleanup_test_data.py  patch_feec_wheel_constraints.py  perf_smoke.py  seed_complete_data.py  seed_data_structure.yaml  seed_sample_product.py  validate_setup.py  validate_setup.sh
src/osiris/: main.py
tests/: test_atributo.py  test_audit_context.py  test_audit_log.py  test_auditoria_base.py  test_bodega.py  test_cargo.py  test_casa_comercial.py  test_categoria.py  test_categoria_atributo.py  test_categoria_herencia_cte.py  test_categoria_regla_b3.py  test_categoria_service.py  test_cliente.py  test_compra_inventario_orquestacion.py  test_compras_cxp_api.py  test_cxc_cobro_service.py  test_cxp_service.py  test_detect_cycle.py  test_documento_descarga_api.py  test_empleado.py  test_empresa.py  test_estado_historial.py  test_facturacion_inventario_orquestacion.py  test_facturacion_models.py  test_facturacion_router.py  test_fe_mapper_service.py  test_impresion_preimpresa_api.py  test_impresion_reimpresion_api.py  test_impresion_ride_a4_api.py  test_impresion_ticket_termico_api.py  test_impuesto_catalogo.py  test_inventario_ajuste_api.py  test_inventario_valoracion_router.py  test_modulo.py  test_movimiento_inventario.py  test_observability.py  test_observability_db.py  test_orquestador_fe_service.py  test_permisos_utils.py  test_persona.py  (+42 more)
tests/live_smoke/: test_bodega_smoke.py  test_categoria_atributo_smoke.py  test_categorias_hierarchy.py  test_crud_smoke.py  test_impuesto_catalogo_router.py  test_modulo_smoke.py  test_permisos_smoke.py  test_producto_categoria_smoke.py  test_producto_crud_completo_smoke.py  test_producto_smoke.py
tests/smoke/: __init__.py  conftest.py  flow_helpers.py  ruc_utils.py  test_all_endpoints.py  test_atributo_smoke.py  test_bodega_smoke.py  test_business_logic_smoke.py  test_categoria_atributo_smoke.py  test_categorias_hierarchy.py  test_crud_smoke.py  test_impuesto_catalogo_router.py  test_list_only.py  test_modulo_smoke.py  test_permisos_smoke.py  test_producto_atributos_smoke.py  test_producto_categoria_smoke.py  test_producto_crud_completo_smoke.py  test_producto_proveedores_smoke.py  test_producto_smoke.py  test_retencion_smoke.py  test_smoke_auditoria.py  test_smoke_config_sri.py  test_smoke_flujo_compras.py  test_smoke_flujo_ventas.py  test_smoke_flujo_ventas_y_cobros.py  test_smoke_impresion.py  test_smoke_reportes.py  (+1 more)
(+517 files in other folders)
