[project]
name = "osiris-be"
version = "0.1.0"
description = "Proyecto Osiris Backend"
authors = [
    {name = "Open Latina", email = "openlatina.cue@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
packages = [{ include = "osiris", from = "src" }]
dependencies = ["fe-ec @ lib/fe_ec-0.1.0-py3-none-any-3.whl", "pydantic[email] (>=2.11.4,<3.0.0)", "python-dotenv (>=1.1.0,<2.0.0)", "pydantic-settings (>=2.8.1,<3.0.0)", "fastapi (>=0.115.12,<0.116.0)", "uvicorn (>=0.34.2,<0.35.0)", "sqlalchemy (>=2.0.40,<3.0.0)", "psycopg2-binary (>=2.9.10,<3.0.0)", "asyncpg (>=0.30.0,<0.31.0)", "alembic (>=1.15.2,<2.0.0)"]

[tool.poetry]
package-mode = false  # <- agrega esto

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
